--- a/index.css
+++ b/index.css
@@ -34,7 +34,7 @@ body{
     background-color: rgb(59, 167, 59);
     padding-left: 15%;
     width: 350px;
-    height: 300px;
+    height: 350px;
     padding-top: 8%;
     border-radius: 10px;
  
@@ -59,6 +59,8 @@ body{
     width: 100px;
     height: 30px;
     font-size: 18px;
+    margin-left: 15%;
+  
 }
 input{
     /* width: 100px; */
